--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
 }
 
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
