--- a/src/index.css
+++ b/src/index.css
@@ -178,3 +178,20 @@
   --color-warning: var(--warning);
   --color-warning-foreground: var(--warning-foreground);
 }
+
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+.container {
+  overflow: scroll;
+  scrollbar-width: none; /* Firefox */
+}
+
+.container::-webkit-scrollbar {
+  display: none; /* Chrome */
+}
